chore: create lazy load module and component

--- a/angular.json
+++ b/angular.json
@@ -120,6 +120,36 @@
           }
         }
       }
+    },
+    "lazy": {
+      "root": "libs/lazy",
+      "sourceRoot": "libs/lazy/src",
+      "projectType": "library",
+      "prefix": "lazy-load",
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/lazy/tsconfig.lib.json",
+              "libs/lazy/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/builders:jest",
+          "options": {
+            "jestConfig": "libs/lazy/jest.config.js",
+            "tsConfig": "libs/lazy/tsconfig.spec.json"
+          }
+        }
+      },
+      "schematics": {
+        "@nrwl/schematics:component": {
+          "styleext": "scss"
+        }
+      }
     }
   },
   "cli": {
