--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "ts-jest": "24.0.0",
     "jest-preset-angular": "7.0.0",
     "@nrwl/builders": "7.8.0",
     "jest": "24.1.0",
