--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,9 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@lazy-load/lazy": ["libs/lazy/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
