--- a/apps/lazy-load/tsconfig.app.json
+++ b/apps/lazy-load/tsconfig.app.json
@@ -5,5 +5,8 @@
     "types": []
   },
   "exclude": ["src/test-setup.ts", "**/*.spec.ts"],
-  "include": ["**/*.ts"]
+  "include": [
+    "**/*.ts",
+    "../../../libs/lazy/src/index.ts"
+  ]
 }
